Create Product Screen

--- a/inventory management/inventory management.csproj
+++ b/inventory management/inventory management.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Create Product From.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Create Product From.Designer.cs">
+      <DependentUpon>Create Product From.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Create Product From.resx">
+      <DependentUpon>Create Product From.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
